--- a/infra/docker-compose.app.yml
+++ b/infra/docker-compose.app.yml
@@ -9,14 +9,14 @@ services:
       QUARKUS_HTTP_PORT: ${QUARKUS_HTTP_PORT}
       QUARKUS_HTTP_HOST: 0.0.0.0
 
+      JAVA_TOOL_OPTIONS: "-Doracle.jdbc.timezoneAsRegion=false -Duser.timezone=UTC"
+
       # Oracle datasource
+      QUARKUS_FLYWAY_ORACLE_REPAIR_AT_START: "true"
       QUARKUS_DATASOURCE_ORACLE_DB_KIND: oracle
       QUARKUS_DATASOURCE_ORACLE_USERNAME: ${ORACLE_APP_USER}
       QUARKUS_DATASOURCE_ORACLE_PASSWORD: "${ORACLE_APP_PASSWORD}"
-      QUARKUS_DATASOURCE_ORACLE_JDBC_URL: "jdbc:oracle:thin:@//oracle-xe:1521/XEPDB1"
-
-      # Flyway
-      QUARKUS_FLYWAY_ORACLE_REPAIR_AT_START: "true"
+      QUARKUS_DATASOURCE_ORACLE_JDBC_URL: "jdbc:oracle:thin:@//oracle-xe:1521/XE"
 
       # Postgres
       QUARKUS_DATASOURCE_POSTGRES_DB_KIND: postgresql
@@ -24,7 +24,7 @@ services:
       QUARKUS_DATASOURCE_POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
       QUARKUS_DATASOURCE_POSTGRES_JDBC_URL: "jdbc:postgresql://postgres:5432/${POSTGRES_DB}"
 
-      QUARKUS_FLYWAY_ORACLE_MIGRATE_AT_START: "true"
+      QUARKUS_FLYWAY_ORACLE_MIGRATE_AT_START: "false"
       QUARKUS_FLYWAY_ORACLE_LOCATIONS: "filesystem:/migrations/oracle"
       QUARKUS_FLYWAY_POSTGRES_MIGRATE_AT_START: "false"
       QUARKUS_FLYWAY_POSTGRES_LOCATIONS: "filesystem:/migrations/postgres"
@@ -34,6 +34,13 @@ services:
       - ./postgres/migrations:/migrations/postgres:ro
     ports:
       - "127.0.0.1:${QUARKUS_HTTP_PORT}:${QUARKUS_HTTP_PORT}"
+
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS http://localhost:${QUARKUS_HTTP_PORT}/q/health || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 12
+      start_period: 20s
 
 networks:
   infra_net:
