--- a/infra/docker-compose.db.yml
+++ b/infra/docker-compose.db.yml
@@ -118,6 +118,11 @@ SQL\n\
       - pgdata:/var/lib/postgresql/data
     ports:
       - "127.0.0.1:5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} -h localhost"]
+      interval: 5s
+      timeout: 3s
+      retries: 30
 
 volumes:
   xe-data:
