--- a/agape-api/src/main/resources/application-dev.properties
+++ b/agape-api/src/main/resources/application-dev.properties
@@ -1,20 +1,45 @@
-# --- HTTP ---
+# =========================
+# HTTP (dev)
+# =========================
 quarkus.http.port=8080
 quarkus.http.host=0.0.0.0
 
-# --- Oracle datasource (XE 11g) ---
+# =========================
+# ORACLE DATASOURCE (dev)
+# =========================
 quarkus.datasource.oracle.db-kind=oracle
 quarkus.datasource.oracle.jdbc.url=jdbc:oracle:thin:@//localhost:1521/XE
 quarkus.datasource.oracle.username=IN_WPRG
 quarkus.datasource.oracle.password=InWprgPass123!
 
-# --- Postgres datasource ---
+# =========================
+# POSTGRES DATASOURCE (dev)
+# =========================
 quarkus.datasource.postgres.db-kind=postgresql
 quarkus.datasource.postgres.jdbc.url=jdbc:postgresql://localhost:5432/appdb
 quarkus.datasource.postgres.username=app
 quarkus.datasource.postgres.password=PgSecret123!
 
-#quarkus.flyway.postgres.migrate-at-start=false
-#quarkus.flyway.postgres.locations=filesystem:/migrations/postgres
+# =========================
+# FLYWAY ON POSTGRES (dev)
+# =========================
+# Use local path (relative to agape-api module) for migrations
+quarkus.flyway.postgres.migrate-at-start=true
+quarkus.flyway.postgres.locations=filesystem:../infra/postgres/migrations
 
+# Disable devservices because you manage DBs yourself via docker-compose
 quarkus.datasource.devservices.enabled=false
+
+# =========================
+# JWT / AUTH CONFIG (dev)
+# =========================
+# These could be omitted (they're inherited from application.properties),
+# but it's fine to repeat them if you like explicit dev config.
+
+auth.jwt.issuer=agape-api
+auth.jwt.expiration-in-seconds=86400
+auth.jwt.default-role-name=USER
+
+smallrye.jwt.sign.key-location=privateKey.pem
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=${auth.jwt.issuer}
