--- a/agape-api/src/main/resources/application.properties
+++ b/agape-api/src/main/resources/application.properties
@@ -6,9 +6,17 @@ quarkus.datasource.oracle.jdbc.url=${QUARKUS_DATASOURCE_ORACLE_JDBC_URL:jdbc:ora
 
 # --- Postgres datasource ---
 quarkus.datasource.postgres.db-kind=postgresql
-quarkus.datasource.postgres.username=${QUARKUS_DATASOURCE_POSTGRES_USERNAME:app}
-quarkus.datasource.postgres.password=${QUARKUS_DATASOURCE_POSTGRES_PASSWORD:PgSecret123!}
-quarkus.datasource.postgres.jdbc.url=${QUARKUS_DATASOURCE_POSTGRES_JDBC_URL:jdbc:postgresql://postgres:5432/appdb}
+quarkus.hibernate-orm.datasource=postgres
 
-#quarkus.flyway.postgres.migrate-at-start=${QUARKUS_FLYWAY_POSTGRES_MIGRATE_AT_START:true}
-#quarkus.flyway.postgres.locations=${QUARKUS_FLYWAY_POSTGRES_LOCATIONS:filesystem:/migrations/postgres}
+quarkus.flyway.postgres.migrate-at-start=${QUARKUS_FLYWAY_POSTGRES_MIGRATE_AT_START:true}
+quarkus.flyway.postgres.locations=${QUARKUS_FLYWAY_POSTGRES_LOCATIONS:filesystem:/migrations/postgres}
+
+# --- JWT / AUTH CONFIG ---
+auth.jwt.issuer=agape-api
+auth.jwt.expiration-in-seconds=86400
+auth.jwt.default-role-name=USER
+
+smallrye.jwt.sign.key-location=privateKey.pem
+
+mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.issuer=${auth.jwt.issuer}
