--- a/agape-api/src/main/resources/application.properties
+++ b/agape-api/src/main/resources/application.properties
@@ -16,7 +16,7 @@ auth.jwt.issuer=agape-api
 auth.jwt.expiration-in-seconds=86400
 auth.jwt.default-role-name=USER
 
-smallrye.jwt.sign.key-location=privateKey.pem
+smallrye.jwt.sign.key.location=file:../infra/keys/privateKey.pem
+mp.jwt.verify.publickey.location=file:../infra/keys/publicKey.pem
 
-mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=${auth.jwt.issuer}
